# gaterdile

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  default.nix  environment_setup  shell.nix
.sqlx/: query-0cd3c6efa16e55da37b44fb834dce290832348014fbc1f7f78d6c5c355e51a97.json  query-0d48a6da2ed63770b2c9c3739f03e52f82037a2b02c68f3ec54efff895f7c34a.json  query-117913747761f975f15a64bfe0d64e09e1edcf168aeb72fb4a90a082f381ea46.json  query-22296e0d66f869219b97628e88463a02ccbbabc63574eaa0b228e07d3e001092.json  query-2c289f1d287b915f782bd6f485c7c384b3576dfdf9c5872ac08cebbd274828e5.json  query-3b9e75b2f5c6726e4a5aa0f78a9d8218bb09d7130312584c364ceb0a46134285.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-770c9dd7cadf831e24d95f75a8de83a6732880a2e1974391c94998e16883cc21.json  query-7c63f5ec94da0227e2c11a53a3b6ea2b5af833d8fd10f36ae7b70d46f3d9a58c.json  query-866904e3e382653213d1863d1eaf67c07100a81cc0d9053bb6ad451a0e9d07b7.json  query-98b0b60aa35d87f62d10ce821f6119eae23644093e469dea6fc0773b9bfb1008.json  query-9d00617966f8aeebb08de6ad981dc3b8697c65f0b23cea4684f525732d8f6706.json  query-9f8fb76a40b8f45f3bdb5e71c2ca4c36f8afc352d188cffcd2425c01e088df24.json  query-a2f1d5ecfa8dba994636907c98f7b8842971dcb53372bc474205e5f270e4f09f.json  query-a89c332c2a8d9569a491992a6453a4e8b4bc9bae49806acbb28f24cb89e6b07b.json  query-aa59afae439d00e64be5863278e029ee02980feecddb1dc98d99f37e3b80d43e.json  query-ba03b85b8b0dae82026087f8256942c11f05c095e433e63ffc4f30c7df56e4fc.json  query-cc7df764eb2288a98bb4bf58df662f307399970738929c3cc1c5cc37961b3335.json  query-d09ea51e461bfbbf1fa8cf3146e908c5d52abafbfd25fe9f101aa226b70abfb7.json
client/static/: index.html  script.js  styles.css
migrations/: 1_init.sql  20240403005533_init.up.sql
migrations/20160720150332_create_tasks_table/: down.sql  up.sql
src/: db.rs  db_event_types.rs  db_types.rs  handlers.rs  lib.rs  main.rs  schema.rs  transmission.rs
src/api/: messages.rs  mod.rs  sessions.rs
src/database/: community.rs  db.rs  db_event_types.rs  db_types.rs  (+3 more)
static/: index.html  script.js  styles.css
(+6 files in other folders)
