[package]
name = "gaterdile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
diesel-derive-enum = {version = "2.1.0", features = ["sqlite"]}

tracing = "0.1.40"

rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_contrib = "0.4.2"
rocket_ws = "0.1.0"
rocket = "0.5.0"

parking_lot = "0.12.1"
url = { version = "2.4.0", features = ["serde"] }
serde = "1.0.191"
serde_json = "1.0.107"
argon2 = "0.5.2"
